projects/analytics/k8s/service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-attribution
  labels:
    app: analytics-attribution
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: analytics-attribution
